--- a/maket.html
+++ b/maket.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Мой сайт</h1>
+            <h1>Магазин у Равшана</h1>
             <nav>
                 <ul class="main-menu">
                     <li><a href="#">Главная</a></li>
