--- a/maket.html
+++ b/maket.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul class="main-menu">
                     <li><a href="#">Главная</a></li>
-                    <li><a href="#">О нас</a></li>
+                    <li><a href="#">О нас$$</a></li>
                     <li><a href="#">Контакты</a></li>
                 </ul>
                 <button class="drop-menu"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
